Correção de base

--- a/gestao-de-pedidos-api/src/main/resources/application.yml
+++ b/gestao-de-pedidos-api/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/gestao_pedidos
-    username: gestaopedidos
+    url: jdbc:postgresql://localhost:5432/gestao_tarefas
+    username: gestaotarefas
     password: Aa*32562715
   jpa:
     hibernate:
